--- a/ntp/Dockerfile
+++ b/ntp/Dockerfile
@@ -5,4 +5,6 @@ RUN apk add --no-cache openntpd
 
 COPY asset/ntpd.conf /etc/ntpd.conf
 
+EXPOSE 123
+
 ENTRYPOINT ["/usr/sbin/ntpd", "-v", "-d", "-s" ]
